bpo-31566: Fix an assertion failure in _warnings.warn() in case of a bad __name__ global. (#3717)